--- a/src/TP3/01/main.css
+++ b/src/TP3/01/main.css
@@ -1,5 +1,61 @@
-* {
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #333;
+  color: white;
+}
+
+.logo-img {
+  width: 50px;
+}
+
+.menu-icon {
+  display: block;
+  cursor: pointer;
+}
+
+.menu {
+  display: none;
+  list-style: none;
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+}
+
+.menu.open {
+  display: block;
+}
+
+.menu li {
+  margin: 10px 0;
+}
+
+.menu a {
+  color: white;
+  text-decoration: none;
+}
+
+@media (min-width: 768px) {
+  .menu-icon {
+    display: none;
+  }
+
+  .menu {
+    display: flex;
+  }
+
+  .menu li {
+    margin: 0 10px;
+  }
+
+  .menu.open {
+    display: flex;
+  }
 }
