--- a/src/TP3/04/main.css
+++ b/src/TP3/04/main.css
@@ -1,5 +1,94 @@
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.header {
+  padding: 1rem;
+  background-color: #333;
+  color: white;
+  text-align: center;
+}
+
+.logo {
+  height: 40px;
+}
+
+.content {
+  flex-grow: 1;
+  padding: 2rem;
+}
+
+.bottom-nav {
+  background-color: #444;
+  color: white;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  transition: height 0.3s ease-in-out;
+}
+
+.bottom-nav ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-around;
+  flex-grow: 1;
+}
+
+.bottom-nav ul li {
+  margin: 0 10px;
+}
+
+.menu-toggle {
+  font-size: 1.5rem;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.collapsed {
+  height: 60px;
+}
+
+.open {
+  height: 120px;
+  flex-direction: column;
+}
+
+.open ul {
+  flex-direction: column;
+}
+
+/* Estilos responsivos */
+@media (min-width: 768px) {
+  .bottom-nav {
+    height: 60px;
+  }
+
+  .bottom-nav ul {
+    justify-content: space-around;
+    flex-direction: row;
+  }
+
+  .menu-toggle {
+    display: none;
+  }
 }
