--- a/src/TP3/05/main.css
+++ b/src/TP3/05/main.css
@@ -3,3 +3,25 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+h2 {
+  font-size: clamp(2em, 3vw, 3em);
+  text-align: center;
+}
+
+h3 {
+  font-size: clamp(1.75em, 2.5vw, 2.5em);
+  text-align: center;
+}
+
+h4 {
+  font-size: clamp(1.5em, 2vw, 2em);
+  text-align: center;
+}
+
+p {
+  font-size: clamp(1em, 1.5vw, 1.5em);
+  text-align: justify;
+  text-indent: 20px;
+  padding: 0 20px;
+}
