--- a/src/TP3/07/main.css
+++ b/src/TP3/07/main.css
@@ -3,3 +3,39 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+.card-container {
+  display: flex;
+  max-width: 500px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.card-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-image img {
+  width: 100px;
+  height: auto;
+}
+
+.card-content {
+  padding: 20px;
+  background-color: #fff;
+}
+
+.card-content h2 {
+  margin-top: 0;
+  font-size: 1.5em;
+  color: #000;
+}
+
+.card-content p {
+  margin: 10px 0;
+  font-size: 1em;
+  color: #333;
+}
