--- a/src/TP3/08/main.css
+++ b/src/TP3/08/main.css
@@ -3,3 +3,10 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+.app {
+  display: flex;
+  place-content: center;
+  background-color: gray;
+  padding: 10px 0;
+}
